# yt-dl

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  app.py  config.yaml.example  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  WORKFLOWS.md
src/: __init__.py
src/core/: __init__.py  config.py  constants.py  environment.py  exceptions.py  logger.py  utils.py  workspace.py
src/downloader/: __init__.py  downloader.py  ffmpeg_processor.py  yt_dlp_config.py
src/interfaces/: __init__.py
src/interfaces/cli/: __init__.py  app.py
src/interfaces/cli/commands/: __init__.py  cache.py  config.py  download.py  serve.py
src/interfaces/webui/: __init__.py  app.py  components.py
src/interfaces/webui/tabs/: __init__.py  about.py  downloader.py
src/metadata/: __init__.py  cover.py  itunes.py  lastfm.py  musicbrainz.py  spotify.py  tagger.py  utils.py  ydl.py
